# internal/rest/controller/auth/auth.go
@@ -1,11 +1,12 @@
 package auth
 
 import (
-	"fmt"
 	"github.com/labstack/echo/v4"
-	"github.com/semenovem/portal/pkg/failing"
+	"github.com/semenovem/portal/pkg/jwtoken"
 	"github.com/semenovem/portal/pkg/txt"
 	"net/http"
+
+	_ "github.com/semenovem/portal/pkg/failing"
 )
 
 // Login docs
@@ -13,8 +14,8 @@ import (
 //	@Summary	Авторизация пользователя
 //	@Description
 //	@Produce	json
-//	@Param		payload	body		LoginForm	true	"Логин/пароль"
-//	@Success	200		{object}	LoginResponse
+//	@Param		payload	body		loginForm	true	"Логин/пароль"
+//	@Success	200		{object}	loginResponse
 //	@Failure	400		{object}	failing.Response
 //	@Router		/auth/login [POST]
 //	@Tags		auth
@@ -22,7 +23,7 @@ import (
 func (cnt *Controller) Login(c echo.Context) error {
 	var (
 		ll   = cnt.logger.Named("Login")
-		form = new(LoginForm)
+		form = new(loginForm)
 		ctx  = c.Request().Context()
 	)
 
@@ -50,14 +51,72 @@ func (cnt *Controller) Login(c echo.Context) error {
 		return cnt.failing.Send(c, "", http.StatusBadRequest, txt.AuthInvalidLogoPasswd, err)
 	}
 
-	fmt.Println("!!!!!!!!!!!! authSession = ", authSession)
+	pair, err := cnt.jwt.NewPairTokens(&jwtoken.TokenParams{
+		SessionID: authSession.ID,
+		UserID:    authSession.UserID,
+		RefreshID: authSession.RefreshID,
+	})
 
-	f := failing.Response{
-		Code:             0,
-		Message:          "",
-		ValidationErrors: nil,
-		AdditionalFields: nil,
+	if err != nil {
+		ll.Named("NewPairTokens").Error(err.Error())
+		return cnt.failing.SendInternalServerErr(c, "", err)
 	}
 
-	return c.JSON(http.StatusOK, f)
+	for _, cookie := range cnt.refreshTokenCookies(pair.Refresh) {
+		c.SetCookie(cookie)
+	}
+
+	return c.JSON(http.StatusOK, loginResponse{
+		AccessToken:  pair.Access,
+		RefreshToken: pair.Refresh,
+		UserID:       authSession.UserID,
+	})
+}
+
+// Logout docs
+//
+//	@Summary	Выход из авторизованной сессии пользователя
+//	@Description
+//	@Produce	json
+//	@Success	200		{object}	loginResponse
+//	@Failure	400		{object}	failing.Response
+//	@Router		/auth/logout [POST]
+//	@Tags		auth
+//	@Security	ApiKeyAuth
+func (cnt *Controller) Logout(c echo.Context) error {
+	var (
+		ll  = cnt.logger.Named("Logout")
+		ctx = c.Request().Context()
+	)
+
+	for _, cookie := range cnt.refreshTokenCookies("") {
+		c.SetCookie(cookie)
+	}
+
+	refreshCookie, err := c.Cookie(cnt.jwtRefreshTokenCookieName)
+	if err != nil {
+		ll.Named("Cookie").Error(err.Error())
+		return cnt.failing.Send(c, "", http.StatusOK, err)
+	}
+
+	payload, err := cnt.jwt.GetRefreshPayload(refreshCookie.Value)
+	if err != nil {
+		ll.Named("GetRefreshPayload").Error(err.Error())
+		return cnt.failing.Send(c, "", http.StatusOK, err)
+	}
+
+	ll = ll.With("payload", payload)
+
+	if payload.IsExpired() {
+		ll.Named("IsExpired").Error("refresh token is expired")
+		// TODO сообщение в аудит безопасности
+		return cnt.failing.Send(c, "", http.StatusOK, err)
+	}
+
+	if err = cnt.authAct.Logout(ctx, payload.SessionID); err != nil {
+		ll.Named("Logout").Nested(err.Error())
+		return cnt.failing.Send(c, "", http.StatusOK, err)
+	}
+
+	return c.NoContent(http.StatusNoContent)
 }
