# internal/rest/controller/auth/form.go
@@ -4,7 +4,7 @@ import (
 	"github.com/google/uuid"
 )
 
-type LoginForm struct {
+type loginForm struct {
 	Login    string    `json:"login" validate:"required,user-login-vld-tag"`
 	Passwd   string    `json:"password" validate:"required"`
 	DeviceID uuid.UUID `json:"device_id" validate:"omitempty"`
