# internal/rest/controller/auth/response.go
@@ -1,6 +1,7 @@
 package auth
 
-type LoginResponse struct {
-	AccessToken string `json:"access_token"`
-	UserID      uint32 `json:"user_id"`
+type loginResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"` // TODO для разработки
+	UserID       uint32 `json:"user_id"`
 }
